Fix date width; make bottombar visible all the time

--- a/css/style.css
+++ b/css/style.css
@@ -432,7 +432,7 @@ div#about a:active, div#about a:hover, div#about a:visited
 
 /* controls: layers and time */
 
-.leaflet-top.leaflet-left, .leaflet-bottom.leaflet-left {
+.leaflet-bottom.leaflet-left {
   background-color: gold;
   min-height: 50px;
   width: calc(100vw - 20px);
@@ -442,9 +442,9 @@ div#about a:active, div#about a:hover, div#about a:visited
 
   box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
 
-  transition: visibility 0.3s linear, opacity 0.3s linear;
+  /*transition: visibility 0.3s linear, opacity 0.3s linear;
   visibility: hidden;
-  opacity: 0;
+  opacity: 0;*/
 }
 
 .leaflet-top.leaflet-left {
@@ -519,7 +519,7 @@ a.leaflet-control-timecontrol.timecontrol-date,
 a.leaflet-control-timecontrol.timecontrol-date:hover,
 a.leaflet-control-timecontrol.timecontrol-date.utc,
 a.leaflet-control-timecontrol.timecontrol-date.utc:hover {
-  min-width: 70px;
+  min-width: 100px;
   width: auto;
   padding-left: 30px;
 }
@@ -543,7 +543,8 @@ a.leaflet-control-timecontrol.timecontrol-date.loading.utc:before {
 
 .leaflet-control-timecontrol.timecontrol-slider .slider {
   height: 2px;
-  width: 100%;
+  /* width: 100%; */
+  width: 100px;
   margin-top: 14px;
   margin-left: 0px;
   background-color: #66666666;  /* somewhat transparent! */
